--- a/index.html
+++ b/index.html
@@ -1,1 +1,135 @@
-
+<!DOCTYPE html>
+<html> 
+  <head> 
+    <title>A Trivial Test</title>
+	<link rel="stylesheet" href="style.css">
+	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
+	<script src="script.js"></script>
+  </head>
+  <body> 
+    <h1>A Trivial Test</h1>
+    <p> 
+      Description  
+    </p>
+	<form action="/action_page.php">
+		<p id="random1"> </p>
+		<input type="radio" name="1" value="1">
+		<label id="answer1" for="1">a</label><br>
+		<input type="radio" name="1" value="2">
+		<label id="answer2" for="1">b</label><br>  
+		<input type="radio" name="1" value="3">
+		<label id="answer3" for="1">c</label><br>
+		<input type="radio" name="1" value="4">
+		<label id="answer4" for="1">d</label><br>
+		
+		<br>
+		
+		<p id="random2"> </p>
+		<input type="radio" name="2" value="5">
+		<label id="answer5" for="2">a</label><br>
+		<input type="radio" name="2" value="6">
+		<label id="answer6" for="2">b</label><br>  
+		<input type="radio" name="2" value="7">
+		<label id="answer7" for="2">c</label><br>
+		<input type="radio" name="2" value="8">
+		<label id="answer8" for="2">d</label><br>
+		
+		<br>
+		
+		<p id="random3"> </p>
+		<input type="radio" name="3" value="9">
+		<label id="answer9" for="3">a</label><br>
+		<input type="radio" name="3" value="10">
+		<label id="answer10" for="3">b</label><br>  
+		<input type="radio" name="3" value="11">
+		<label id="answer11" for="3">c</label><br>
+		<input type="radio" name="3" value="12">
+		<label id="answer12" for="3">d</label><br>
+		
+		<br>
+		
+		<p id="random4"> </p>
+		<input type="radio" name="4" value="13">
+		<label id="answer13" for="4">a</label><br>
+		<input type="radio" name="4" value="14">
+		<label id="answer14" for="4">b</label><br>  
+		<input type="radio" name="4" value="15">
+		<label id="answer15" for="4">c</label><br>
+		<input type="radio" name="4" value="16">
+		<label id="answer16" for="4">d</label><br>
+		
+		<br>
+		
+		<p id="random5"> </p>
+		<input type="radio" name="5" value="17">
+		<label id="answer17" for="5">a</label><br>
+		<input type="radio" name="5" value="18">
+		<label id="answer18" for="5">b</label><br>  
+		<input type="radio" name="5" value="19">
+		<label id="answer19" for="5">c</label><br>
+		<input type="radio" name="5" value="20">
+		<label id="answer20" for="5">d</label><br>
+		
+		<br>
+		
+		<p id="random6"> </p>
+		<input type="radio" name="6" value="21">
+		<label id="answer21" for="6">a</label><br>
+		<input type="radio" name="6" value="22">
+		<label id="answer22" for="6">b</label><br>  
+		<input type="radio" name="6" value="23">
+		<label id="answer23" for="6">c</label><br>
+		<input type="radio" name="6" value="24">
+		<label id="answer24" for="6">d</label><br>
+		
+		<br>
+		
+		<p id="random7"> </p>
+		<input type="radio" name="7" value="25">
+		<label id="answer25" for="7">a</label><br>
+		<input type="radio" name="7" value="26">
+		<label id="answer26" for="7">b</label><br>  
+		<input type="radio" name="7" value="27">
+		<label id="answer27" for="7">c</label><br>
+		<input type="radio" name="7" value="28">
+		<label id="answer28" for="7">d</label><br>
+		
+		<br>
+		
+		<p id="random8"> </p>
+		<input type="radio" name="8" value="29">
+		<label id="answer29" for="8">a</label><br>
+		<input type="radio" name="8" value="30">
+		<label id="answer30" for="8">b</label><br>  
+		<input type="radio" name="8" value="31">
+		<label id="answer31" for="8">c</label><br>
+		<input type="radio" name="8" value="32">
+		<label id="answer32" for="8">d</label><br>
+		
+		<br>
+		
+		<p id="random9"> </p>
+		<input type="radio" name="9" value="33">
+		<label id="answer33" for="9">a</label><br>
+		<input type="radio" name="9" value="34">
+		<label id="answer34" for="9">b</label><br>  
+		<input type="radio" name="9" value="35">
+		<label id="answer35" for="9">c</label><br>
+		<input type="radio" name="9" value="36">
+		<label id="answer36" for="9">d</label><br>
+		
+		<br>
+		
+		<p id="random10"> </p>
+		<input type="radio" name="10" value="37">
+		<label id="answer37" for="10">a</label><br>
+		<input type="radio" name="10" value="38">
+		<label id="answer38" for="10">b</label><br>  
+		<input type="radio" name="10" value="39">
+		<label id="answer39" for="10">c</label><br>
+		<input type="radio" name="10" value="40">
+		<label id="answer40" for="10">d</label><br><br>
+		<input type="submit" value="Submit">
+	</form>
+  </body>
+</html> 
